--- a/front/public/index.html
+++ b/front/public/index.html
@@ -25,10 +25,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/resources/css/setting.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/resources/css/plugin.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/resources/css/template.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/resources/css/common.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/resources/css/style.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script src="%PUBLIC_URL%/resources/js/setting.js"></script>
+    <script src="%PUBLIC_URL%/resources/js/plugin.js"></script>
+    <script src="%PUBLIC_URL%/resources/js/template.js"></script>
+    <script src="%PUBLIC_URL%/resources/js/common.js"></script>
+    <script src="%PUBLIC_URL%/resources/js/script.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
