--- a/front/public/index.html
+++ b/front/public/index.html
@@ -36,6 +36,13 @@
       <script src="%PUBLIC_URL%/resources/js/template.js"></script>
       <script src="%PUBLIC_URL%/resources/js/common.js"></script>
       <script src="%PUBLIC_URL%/resources/js/script.js"></script>
+
+      <link href="%PUBLIC_URL%/resources2/styles/common.css" rel="stylesheet" type="text/css" />
+      <link href="%PUBLIC_URL%/resources2/styles/nav.css" rel="stylesheet" type="text/css" />
+      <link href="%PUBLIC_URL%/resources2/styles/body.css" rel="stylesheet" type="text/css" />
+
+      <script src="%PUBLIC_URL%/resources2/js/main.js"></script>
+
     </head>
     <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
