--- a/front/public/index.html
+++ b/front/public/index.html
@@ -43,6 +43,8 @@
 
       <script src="%PUBLIC_URL%/resources2/js/main.js"></script>
 
+      <link href="%PUBLIC_URL%/resources2/styles/new_post.css" rel="stylesheet" type="text/css" />
+
     </head>
     <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
