--- a/front/public/index.html
+++ b/front/public/index.html
@@ -40,6 +40,7 @@
       <link href="%PUBLIC_URL%/resources2/styles/common.css" rel="stylesheet" type="text/css" />
       <link href="%PUBLIC_URL%/resources2/styles/nav.css" rel="stylesheet" type="text/css" />
       <link href="%PUBLIC_URL%/resources2/styles/body.css" rel="stylesheet" type="text/css" />
+      <link href="%PUBLIC_URL%/resources2/styles/sidebar.css" rel="stylesheet" type="text/css" />
 
       <script src="%PUBLIC_URL%/resources2/js/main.js"></script>
 
