add : publicSidebar, modify : addallschoolnoice

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -46,6 +46,12 @@
 
       <link href="%PUBLIC_URL%/resources2/styles/new_post.css" rel="stylesheet" type="text/css" />
 
+      <!--Allschool -->
+      <script src="%PUBLIC_URL%/resources2/js/carousel.js"></script>
+
+      <link href="%PUBLIC_URL%/resources2/styles/allschool.css" rel="stylesheet" type="text/css" />
+
+
     </head>
     <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
