--- a/front/public/index.html
+++ b/front/public/index.html
@@ -50,7 +50,7 @@
       <script src="%PUBLIC_URL%/resources2/js/carousel.js"></script>
 
       <link href="%PUBLIC_URL%/resources2/styles/allschool.css" rel="stylesheet" type="text/css" />
-
+<!--Project -->
 
     </head>
     <body>
